--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
   "author": "Fullstack Academy of Code",
   "license": "MIT",
   "dependencies": {
+    "@chec/commerce.js": "^2.8.0",
     "antd": "^4.21.2",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
+    "bootstrap": "^5.1.3",
     "compression": "^1.7.3",
     "express": "^4.16.4",
     "history": "^4.9.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
+    "react-bootstrap": "^2.4.0",
     "sequelize": "^6.3.5",
     "styled-components": "^5.3.5"
   },
